examples/test/testpolicy5996.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5996
  namespace: namespace347
spec:
  podSelector:
    matchLabels:
      key39: value17
      key35: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value21
          key23: value31
      podSelector:
        matchLabels:
          key37: value3
          key17: value23
